--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: #020617; /* matches bg-slate-950/dark gray */
+      background: #020617;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
     }
   </style>
@@ -27,7 +27,7 @@
 <body>
   <div id="root"></div>
 
-  <!-- Your React app -->
+  <!-- React app -->
   <script type="text/babel" data-presets="env,react">
     const { useState } = React;
 
@@ -36,7 +36,7 @@
         id: 1,
         title: "HUMAIN Code",
         content: (
-          <div className="flex flex-col items-center justify-center h-full text-center px-8 relative">
+          <div className="flex flex-col items-center justify-center min-h-[520px] text-center px-8 relative">
             <p className="text-emerald-400 text-sm tracking-widest mb-4">HEAD OF PRODUCT VISION</p>
             <h1 className="text-5xl font-bold text-white mb-6">HUMAIN Code</h1>
             <p className="text-xl text-gray-400 max-w-2xl mb-10">
@@ -838,415 +838,3 @@
                     4. Value premium justified by compliance automation
                   </p>
                 </div>
-                <p className="text-emerald-400 text-xs tracking-widest mb-2">
-                  TIER STRUCTURE
-                </p>
-                <div className="grid grid-cols-1 md:grid-cols-3 gap-2">
-                  {[
-                    {
-                      tier: "Startup",
-                      price: "$29",
-                      unit: "/seat/month",
-                      desc: "Basic compliance",
-                      color: "border-gray-600"
-                    },
-                    {
-                      tier: "Enterprise",
-                      price: "$59",
-                      unit: "/seat/month",
-                      desc: "Full compliance + SSO",
-                      color: "border-emerald-500"
-                    },
-                    {
-                      tier: "Government",
-                      price: "Custom",
-                      unit: "annual contract",
-                      desc: "Dedicated + SLA",
-                      color: "border-yellow-500"
-                    }
-                  ].map((t) => (
-                    <div
-                      key={t.tier}
-                      className={`bg-gray-800 rounded p-3 border-t-2 ${t.color}`}
-                    >
-                      <p className="text-white font-semibold text-sm">
-                        {t.tier}
-                      </p>
-                      <p className="text-emerald-400 text-xl font-bold">
-                        {t.price}
-                      </p>
-                      <p className="text-gray-500 text-xs">{t.unit}</p>
-                      <p className="text-gray-400 text-xs mt-1">{t.desc}</p>
-                    </div>
-                  ))}
-                </div>
-              </div>
-              <div className="flex-1">
-                <p className="text-emerald-400 text-xs tracking-widest mb-3">
-                  VALUE JUSTIFICATION
-                </p>
-                <div className="bg-gray-800 rounded p-3 mb-2">
-                  <p className="text-red-400 text-sm mb-1">
-                    Current cost (manual compliance):
-                  </p>
-                  <p className="text-gray-300 text-xs">
-                    3 hrs/PR × $50/hr × 20 PRs/mo ={" "}
-                    <span className="text-red-400 font-bold">
-                      $3,000/dev/mo
-                    </span>
-                  </p>
-                </div>
-                <div className="bg-gray-800 rounded p-3 mb-2">
-                  <p className="text-emerald-400 text-sm mb-1">
-                    HUMAIN Code cost:
-                  </p>
-                  <p className="text-gray-300 text-xs">
-                    $59/seat/month ={" "}
-                    <span className="text-emerald-400 font-bold">
-                      98% cost reduction
-                    </span>
-                  </p>
-                </div>
-                <div className="bg-gradient-to-r from-emerald-500 to-emerald-600 rounded p-3 mb-3">
-                  <p className="text-white font-semibold text-sm mb-1">
-                    ROI for 100-seat enterprise:
-                  </p>
-                  <p className="text-white/90 text-xs">
-                    Save $294K/month vs manual review
-                  </p>
-                  <p className="text-white/90 text-xs">
-                    50x return on investment
-                  </p>
-                </div>
-                <p className="text-emerald-400 text-xs tracking-widest mb-2">
-                  ALTERNATIVES CONSIDERED
-                </p>
-                <div className="bg-gray-800 rounded p-2">
-                  <p className="text-gray-500 text-xs">
-                    <span className="text-gray-600">✕ Pure usage:</span>{" "}
-                    Unpredictable, hard to budget
-                  </p>
-                  <p className="text-gray-500 text-xs">
-                    <span className="text-gray-600">✕ Flat fee:</span> Doesn't
-                    scale with value
-                  </p>
-                  <p className="text-gray-500 text-xs">
-                    <span className="text-gray-600">✕ Freemium:</span> Wrong
-                    signal for enterprise
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        )
-      },
-      {
-        id: 11,
-        title: "Vision: 2030",
-        content: (
-          <div className="p-6">
-            <h1 className="text-3xl font-bold text-white mb-1">
-              Long-term Vision: 2030
-            </h1>
-            <p className="text-gray-400 text-sm mb-3">
-              From product to platform to national infrastructure
-            </p>
-            <div className="bg-gradient-to-r from-emerald-500 to-emerald-600 rounded-lg p-4 mb-4 text-center">
-              <p className="text-white font-semibold">
-                By 2030, every line of code in Saudi digital infrastructure will
-                be enhanced by HUMAIN Code — making the Kingdom the global
-                benchmark for AI-powered development.
-              </p>
-            </div>
-            <div className="grid grid-cols-1 md:grid-cols-4 gap-3">
-              {[
-                {
-                  years: "2025-2026",
-                  name: "Developer Tool",
-                  items: [
-                    "5,000 active developers",
-                    "50 enterprise customers",
-                    "IDE + PR review"
-                  ],
-                  focus: "Prove value"
-                },
-                {
-                  years: "2027",
-                  name: "DevOps Platform",
-                  items: [
-                    "25,000 developers",
-                    "Full CI/CD integration",
-                    "GCC region expansion"
-                  ],
-                  focus: "Capture workflow"
-                },
-                {
-                  years: "2028",
-                  name: "AI Ecosystem",
-                  items: [
-                    "100,000 developers",
-                    "Marketplace and plugins",
-                    "Custom model training"
-                  ],
-                  focus: "Platform effects"
-                },
-                {
-                  years: "2029-2030",
-                  name: "National Infra",
-                  items: [
-                    "300,000+ developers",
-                    "Government mandate",
-                    "Global MENA export"
-                  ],
-                  focus: "Vision 2030 complete",
-                  highlight: true
-                }
-              ].map((y) => (
-                <div
-                  key={y.years}
-                  className={`bg-gray-800 rounded p-3 ${
-                    y.highlight ? "border border-emerald-400" : ""
-                  }`}
-                >
-                  <p className="text-emerald-400 text-xs tracking-widest">
-                    {y.years}
-                  </p>
-                  <p className="text-white font-semibold text-sm mb-2">
-                    {y.name}
-                  </p>
-                  {y.items.map((item) => (
-                    <p key={item} className="text-gray-300 text-xs">
-                      {item}
-                    </p>
-                  ))}
-                  <div
-                    className={`${
-                      y.highlight
-                        ? "bg-emerald-500 text-gray-900"
-                        : "bg-gray-900 text-gray-500"
-                    } p-1.5 rounded mt-2`}
-                  >
-                    <p className="text-xs font-medium">{y.focus}</p>
-                  </div>
-                </div>
-              ))}
-            </div>
-          </div>
-        )
-      },
-      {
-        id: 12,
-        title: "Why Me",
-        content: (
-          <div className="p-6">
-            <h1 className="text-3xl font-bold text-white mb-4">
-              Why I'm the Right Leader
-            </h1>
-            <div className="flex flex-col md:flex-row gap-6">
-              <div className="flex-1">
-                <p className="text-emerald-400 text-xs tracking-widest mb-3">
-                  RELEVANT EXPERIENCE
-                </p>
-                {[
-                  {
-                    title: "AI-Powered Platform at Scale",
-                    desc: "Designed AI recommendation engine at Publicis — projected 5x productivity across 60+ agencies"
-                  },
-                  {
-                    title: "Enterprise Product Leadership",
-                    desc: "$15M monthly cost savings. Global rollouts across US, EU, India. 90% faster time-to-market."
-                  },
-                  {
-                    title: "Product Transformation (Consulting)",
-                    desc: "Unified Elliptic's product suite, new SaaS model. Migrated legacy products with 85% success."
-                  },
-                  {
-                    title: "Founder: 0-to-1 Execution",
-                    desc: "Switch2VR: 600K profit Year 1. Switch2VU: 50 customers in 4 months. UAE + KSA markets."
-                  }
-                ].map((e) => (
-                  <div
-                    key={e.title}
-                    className="bg-gray-800 rounded p-3 mb-2 border-l-2 border-emerald-400"
-                  >
-                    <p className="text-white font-semibold text-sm">{e.title}</p>
-                    <p className="text-gray-400 text-xs">{e.desc}</p>
-                  </div>
-                ))}
-              </div>
-              <div className="flex-1">
-                <p className="text-emerald-400 text-xs tracking-widest mb-3">
-                  WHAT I BRING TO HUMAIN
-                </p>
-                <div className="bg-gray-800 rounded p-4 mb-3">
-                  {[
-                    {
-                      num: 1,
-                      title: "Hypothesis-Driven",
-                      desc: "Validate before building. Data over opinions."
-                    },
-                    {
-                      num: 2,
-                      title: "AI Product Strategy",
-                      desc: "Work with data science teams to ship AI features."
-                    },
-                    {
-                      num: 3,
-                      title: "Middle East Experience",
-                      desc: "Built and scaled products in UAE and KSA."
-                    },
-                    {
-                      num: 4,
-                      title: "Already Building",
-                      desc: "Built working prototypes before this interview."
-                    }
-                  ].map((b) => (
-                    <div key={b.num} className="flex gap-3 mb-3">
-                      <div className="w-7 h-7 bg-emerald-500 rounded flex items-center justify-center text-sm font-bold text-gray-900 flex-shrink-0">
-                        {b.num}
-                      </div>
-                      <div>
-                        <p className="text-white font-semibold text-sm">
-                          {b.title}
-                        </p>
-                        <p className="text-gray-400 text-xs">{b.desc}</p>
-                      </div>
-                    </div>
-                  ))}
-                </div>
-                <div className="bg-gradient-to-r from-emerald-500 to-emerald-600 rounded p-3 text-center">
-                  <p className="text-white font-semibold">
-                    I don't just talk about products — I build them.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        )
-      },
-      {
-        id: 13,
-        title: "Closing",
-        content: (
-          <div className="flex flex-col items-center justify-center h-full text-center px-8">
-            <p className="text-emerald-400 text-sm tracking-widest mb-4">
-              THE QUESTION
-            </p>
-            <h1 className="text-3xl font-bold text-white mb-6 max-w-2xl">
-              How do we make HUMAIN Code the platform that powers Vision 2030?
-            </h1>
-            <p className="text-gray-400 max-w-xl mb-8">
-              By starting with compliance, validating with real developers,
-              building sovereign infrastructure, and scaling with discipline.
-            </p>
-            <div className="w-16 h-1 bg-emerald-500 rounded mb-8"></div>
-            <div className="flex flex-col md:flex-row gap-4 mb-8">
-              <div className="bg-gray-800 rounded p-4 text-center border border-gray-700">
-                <p className="text-gray-500 text-xs tracking-widest mb-1">
-                  WHAT I BUILT
-                </p>
-                <p className="text-white font-semibold">2 Prototypes</p>
-              </div>
-              <div className="bg-gray-800 rounded p-4 text-center border border-gray-700">
-                <p className="text-gray-500 text-xs tracking-widest mb-1">
-                  WHAT I WILL DELIVER
-                </p>
-                <p className="text-white font-semibold">MVP in 90 Days</p>
-              </div>
-              <div className="bg-gradient-to-b from-emerald-500 to-emerald-600 rounded p-4 text-center">
-                <p className="text-white/80 text-xs tracking-widest mb-1">
-                  LET'S BUILD
-                </p>
-                <p className="text-white font-semibold">Together</p>
-              </div>
-            </div>
-            <p className="text-2xl text-emerald-400 font-semibold">Thank You</p>
-          </div>
-        )
-      }
-    ];
-
-    function HUMAINPresentation() {
-      const [currentSlide, setCurrentSlide] = useState(0);
-
-      const nextSlide = () =>
-        setCurrentSlide((prev) => Math.min(prev + 1, slides.length - 1));
-      const prevSlide = () =>
-        setCurrentSlide((prev) => Math.max(prev - 1, 0));
-
-      // Keyboard navigation
-      React.useEffect(() => {
-        const handleKeyDown = (e) => {
-          if (e.key === "ArrowRight" || e.key === " ") nextSlide();
-          if (e.key === "ArrowLeft") prevSlide();
-        };
-        window.addEventListener("keydown", handleKeyDown);
-        return () => window.removeEventListener("keydown", handleKeyDown);
-      }, []);
-
-      return (
-        <div className="bg-gray-900 min-h-screen flex flex-col">
-          <div className="flex-1 flex items-center justify-center py-4">
-            <div
-              className="relative w-full max-w-6xl bg-gray-900 rounded-lg shadow-lg overflow-hidden"
-              style={{ aspectRatio: "16/9" }}
-            >
-              <div className="absolute inset-0 bg-gray-900 overflow-hidden">
-                {slides[currentSlide].content}
-              </div>
-            </div>
-          </div>
-
-          <div className="bg-gray-800 p-4 flex items-center justify-between">
-            <button
-              onClick={prevSlide}
-              disabled={currentSlide === 0}
-              className="px-4 py-2 bg-emerald-600 text-white rounded disabled:opacity-30 disabled:cursor-not-allowed hover:bg-emerald-500"
-            >
-              ← Previous
-            </button>
-
-            <div className="flex items-center gap-2">
-              <span className="text-white font-semibold">
-                {currentSlide + 1}
-              </span>
-              <span className="text-gray-500">/ {slides.length}</span>
-              <span className="text-gray-400 ml-4">
-                {slides[currentSlide].title}
-              </span>
-            </div>
-
-            <button
-              onClick={nextSlide}
-              disabled={currentSlide === slides.length - 1}
-              className="px-4 py-2 bg-emerald-600 text-white rounded disabled:opacity-30 disabled:cursor-not-allowed hover:bg-emerald-500"
-            >
-              Next →
-            </button>
-          </div>
-
-          <div className="bg-gray-900 p-3 flex gap-2 overflow-x-auto">
-            {slides.map((slide, idx) => (
-              <button
-                key={slide.id}
-                onClick={() => setCurrentSlide(idx)}
-                className={`flex-shrink-0 w-16 h-10 rounded text-xs flex items-center justify-center ${
-                  idx === currentSlide
-                    ? "bg-emerald-600 text-white"
-                    : "bg-gray-700 text-gray-400 hover:bg-gray-600"
-                }`}
-              >
-                {idx + 1}
-              </button>
-            ))}
-          </div>
-        </div>
-      );
-    }
-
-    const rootElement = document.getElementById("root");
-    const root = ReactDOM.createRoot(rootElement);
-    root.render(<HUMAINPresentation />);
-  </script>
-</body>
-</html>
