--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               </div>
             </div>
             <p className="absolute bottom-6 text-xs text-gray-600">
-              Nicolas Arnaud-Goddet • November 2025
+              Nicolas Sakr • November 2025
             </p>
           </div>
         )
